# research-mqtt-mtd

./: .$pics.drawio.bkp  .dockerignore  .gitignore  .gitmodules  README.md  mqtt_research.code-workspace  package-lock.json  pics.drawio  progress.md
.crossnote/: style.less
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
arduino-mqttmtd-cli/: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.properties
arduino-mqttmtd-cli/examples/sample_publish/: sample_publish.ino
arduino-mqttmtd-cli/src/: MQTTMTDClient.cpp  MQTTMTDClient.h  libmqttmtd.cpp  libmqttmtd.h
certcreate/: gen_ca.sh  gen_client.sh  gen_server.sh  generate_certs.sh
certcreate/conf/: client.conf  client_template_nouuid.conf  client_template_uuid.conf  server.conf
certs/ca/: ca.key  ca.pem  ca.srl
certs/clients/: client.csr  client.key  client.pem
certs/server/: server.csr  server.key  server.pem
code/: docker-compose.yml
code/certs/broker/: broker-sans.crt  broker.crt
code/certs/ca/: ca-sans.key  ca.crt  ca.srl
code/certs/client/: client-sans.crt  client.crt
code/docker/: docker-compose.yml
code/docker/broker/: Dockerfile  Dockerfile.1883  Dockerfile.8883  Dockerfile.python
code/docker/client/: Dockerfile  Dockerfile.python
code/hopper-label/: docker-compose.yml
code/hopper-port/: docker-compose.yml
code/hopper-port-ebpf/: docker-compose.yml
code/mosquitto-broker/: Dockerfile
code/mosquitto-cli/: Dockerfile
code/plain/: docker-compose.yml
code/tls/: docker-compose.yml
cpp-mqttmtd-cli/: .gitignore  CMakeLists.txt
cpp-mqttmtd-cli/examples/: MQTTMTDPahoClient.cpp  MQTTMTDPahoClient.h  publish.cpp
cpp-mqttmtd-cli/src/: libmqttmtd.cpp  libmqttmtd.h
database/: docker-compose.yml
database/db/: sqlite.db
database/python-service/: app.py
docker/: Dockerfile.client  Dockerfile.server  Dockerfile.subscriber  docker-compose-full.yaml  docker-compose-server.yaml  docker-compose-tokenmgr_test.yaml  docker-compose.yaml  entrypoint_client.sh  entrypoint_server.sh  run_server.sh  server_start.sh
docker/Dockerfile/: Dockerfile.client  Dockerfile.server-local
docker/Dockerfiles/: Dockerfile.client  Dockerfile.client_ghaction  Dockerfile.client_wrapper  Dockerfile.server  Dockerfile.server_ghaction  Dockerfile.subscriber
docker/entrypoints/: entrypoint_client.sh  entrypoint_server.sh  entrypoint_subscriber.sh
esp32/esp32-tokenmgr/: sdkconfig
go/: go.work  go.work.sum
go-old/client/: client.go
go-old/common/: common.go
go-old/mqttinterface/: mqttinterface.go  parser.go
go-old/tokenmgr/: go.mod  go.sum
go/authserver/: go.mod
go/client/: client.go  go.mod
go/common/: common.go  go.mod
go/config/: config.go
go/funcs/: funcs_issuerverifier.go
go/mqttinterface/: go.mod  mqttinterface.go  parser.go
go/tokenmgr/: tokenmgr.go
go/types/: AuthTokenList.go  types.go
logs/: network_tabler.py  network_visualizer.py  power_tabler.py  power_visualizer.py  time_tabler.py  time_visualizer.py
logs/plot_confs/: plain.yaml  plain_aead.yaml  tls.yaml
mosquitto_config/: acl.acl  mosquitto-tls.conf
mqttmtd-layer/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
mqttmtd-layer/conf/: certgen.toml
mqttmtd_config/: server_conf_docker.yml  server_conf_nondocker_template.yml
playground/: encryption  encryption.c  encryption.go  encryption.py
rust-mqttmtd/: Cargo.toml  code_review.text  rustfmt.toml
rust-mqttmtd/.cargo/: config.toml
rust-mqttmtd/authserver/: Cargo.toml
rust-mqttmtd/authserver/src/: acl.rs  atl.rs  config.rs  error.rs  garbage_collector.rs  issuer.rs  lib.rs  macros.rs  main.rs  verifier.rs
rust-mqttmtd/certgen/: Cargo.toml
rust-mqttmtd/certgen/src/: main.rs
rust-mqttmtd/libmqttmtd/: Cargo.toml
rust-mqttmtd/libmqttmtd/src/: aead.rs  auth_serv.rs  config_helper.rs  consts.rs  lib.rs  macros.rs  printer.rs  socket.rs  utils.rs
rust-mqttmtd/libmqttmtd/src/aead/: algo.rs
rust-mqttmtd/libmqttmtd/src/auth_serv/: error.rs  issuer.rs  macros.rs  verifier.rs
rust-mqttmtd/libmqttmtd/src/socket/: err.rs  error.rs  macros.rs  plain.rs  sock.rs  tls.rs  tls_config.rs  utils.rs
rust-mqttmtd/libmqttmtd/src/socket/plain/: client.rs  server.rs  stream.rs  tcp.rs  unix.rs
rust-mqttmtd/libmqttmtd_macros/: Cargo.toml
rust-mqttmtd/libmqttmtd_macros/src/: lib.rs
rust-mqttmtd/mqttinterface/: Cargo.toml
rust-mqttmtd/mqttinterface/src/: client.rs  config.rs  lib.rs  macros.rs  main.rs  publish.rs  subscribe.rs  v4.rs  v5.rs
rust-mqttmtd/mqttinterface/src/v4/: client.rs  publish.rs  subscribe.rs
rust-mqttmtd/mqttinterface/src/v5/: client.rs  publish.rs  subscribe.rs
rust-mqttmtd/struct_display_macro/: Cargo.toml
rust-mqttmtd/testing/: Cargo.toml  certgen.toml
rust-mqttmtd/testing/src/: certgen.rs  main.rs
rust-mqttmtd/testing/tests/: integration_tests.rs
rust-mqttmtd/to_string_lines_macro/: Cargo.toml
rust-mqttmtd/to_string_lines_macro/src/: lib.rs
rust-mqttmtd/tokenmgr/: Cargo.toml
rust-mqttmtd/tokenmgr/src/: config.rs  errors.rs  lib.rs  main.rs  once.rs  server.rs  tokenset.rs  tokenset_old.rs
rust-mqttmtd/tokenmgr/src/tokenset/: tests.rs
rust-mqttmtd/tokenmgr/tests/: integration_tests.rs
shell/: generate_client_cert  run_client  run_server  run_server_macos  server_start.sh
src/: Dockerfile.authserver  Dockerfile.mqttinterface  Dockerfile.server  acl.yml  docker-compose.yml  generate_certs_for_docker  run_client  run_server  server_start.sh
src/certcreate/: gen_ca_server.sh  gen_client.sh  gen_conf.sh  generate_certs.sh
src/confs/: mosquitto-tls_8883.conf
src/powerLogger/: docker-compose.yml
tests/: .gitignore
tests/certs/: .gitignore  certgen_docker.toml  sample_command
tests/logs/: .gitignore
tests/mqttmtd/: acl.yaml
tests/scripts/: simple_publish_plain_1883.sh  simple_publish_tls_8883.sh  simple_publish_ws_8080.sh  simple_publish_wss_8081.sh
wattlogger/: docker-compose.yml  wattlogger.ino
wattlogger/db/: Dockerfile  sensor_data.db
wattlogger/python-service/: app.py
wattlogger/wattlogger/: wattlogger.ino
wireshark/: mqttmtd.lua
(+192 files in other folders)
