[workspace]
members = [
    "authserver", "libmqttmtd", "mqttinterface", "libmqttmtd_macros", "testing", "tokenmgr",
]
resolver = "3"

[workspace.dependencies]
bytes = "1.10.1"
ring = "0.17.14"
tokio = { version = "1.44.2", features = ["io-util", "macros", "rt-multi-thread", "net", "test-util"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
clap = { version = "4.5.37", features = ["derive"] }
config = { version = "0.15.11", default-features = false, features = ["toml", "yaml"] }
tempfile = "3.19.1"
dirs = "6.0.0"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
base64 = "0.22.1"
uuid = { version = "1.16.0", features = ["v7"] }