[package]
name = "certgen"
version = "2.0.0"
edition = "2024"

[dependencies]
rcgen = { version = "0.13" , features = ["aws_lc_rs"]} # For certificate generation
clap = { version = "4.5", features = ["derive"] } # For command-line arguments
anyhow = "1.0" # For simplified error handling
time = { version = "0.3", features = ["formatting", "parsing"] }
