[package]
name = "libmqttmtd"
version = "2.0.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4.4"
tokio = { version = "1.44.2", default-features = false, features = ["macros"] }

[dependencies]
rcgen = "0.13.2"
ring = "0.17.14"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
tokio = { version = "1.44.2", default-features = false, features = ["io-std", "io-util", "net", "time", "rt", "sync"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_yaml = "0.9.34"
bytes = "1.10.1"
