[package]
name = "libmqttmtd"
version = "2.0.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }

rcgen = { version = "0.13.2", default-features = false, features = ["ring", "pem"] }


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

tokio-test = "0.4.4"
