[package]
name = "libmqttmtd"
version = "2.0.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
libmqttmtd_macros = { path = "../libmqttmtd_macros" }

rcgen = { version = "0.13.2", default-features = false, features = ["pem", "ring"] }


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

tokio-test = "0.4.4"
