[package]
name = "mqttinterface"
version = "2.0.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap ={ version = "4.5.37", features=["derive"]}
mqttbytes = { version = "0.6.0", default-features=false, features = ["v5"] }
tokio = { version = "1.44.2", default-features=false,features = ["io-util", "macros", "rt-multi-thread"] }
libmqttmtd = { path = "../libmqttmtd" }
ring = "0.17.14"
base64 = "0.22.1"
config = { version="0.15.11" , default-features=false, features = ["toml", "yaml"]}
serde = { version = "1.0.219", default-features=false, features = ["derive"] }
