[package]
name = "mqttinterface"
version = "2.0.0"
edition = "2024"

[dependencies]
libmqttmtd = { path = "../libmqttmtd" }
libmqttmtd_macros = { path = "../libmqttmtd_macros" }
bytes = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
base64 = { workspace = true }

mqttbytes = { version = "0.6.0", default-features = false, features = ["v5"] }
