[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
struct_display_macro = { path = "../struct_display_macro" }
clap = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }

rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing"] }