[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
libmqttmtd_macros = { path = "../libmqttmtd_macros" }
clap = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }

rcgen = { version = "0.13.2", default-features = false, features = ["crypto", "pem"] }
time = { version = "0.3.41", default-features = false, features = ["formatting", "parsing"] }