[package]
name = "tokenmgr"
version = "2.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
libmqttmtd = { path = "../libmqttmtd" }
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
tokio = { version = "1.44.2", default-features = false, features = ["net"] }
bytes = "1.10.1"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rand = "0.9.1"
dirs = "6.0.0"
tempfile = "3"
futures = { version = "0.3.31", default-features = false, features = ["io-compat"] }
tokio = { version = "1.44.2", default-features = false, features = ["macros"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["compat"] }
