[package]
name = "tokenmgr"
version = "2.0.0"
edition = "2024"

[dependencies]
libmqttmtd = { path = "../libmqttmtd" }
to_string_lines_macro = { path = "../to_string_lines_macro" }
bytes = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
rand = "0.9.1"
tokio-util = { version = "0.7.15", default-features = false, features = ["compat"] }
futures = { version = "0.3.31", default-features = false, features = ["io-compat"] }
rumqttc = "0.24.0"
